Added encryption and search things updated